# ser1de

./: .gitignore  .gitmodules  LICENSE  README.md  setup.sh
benchmarks/allocation_dev/: .gitignore  CMakeLists.txt
benchmarks/allocation_dev/plots_w_3_4_5_d_2_3_4_r_4_s_1_2_3/: dsa_sensitivity.csv
benchmarks/allocation_dev/results_batching/: dsa_sensitivity.csv
benchmarks/allocation_dev/results_no_batching/: dsa_sensitivity.csv
benchmarks/allocation_dev/scripts/: bench.py  make_plots.py  sweep_results.py
benchmarks/allocation_dev/src/: benchmark.cc  benchmark_ser1de.cc  custom_alloc.h  proto_init.h
benchmarks/archive/dsa_archive/: CMakeLists.txt  dsa.h  scatter_gather.h  scatter_gather_test.cc
benchmarks/archive/dsa_opt/: what
benchmarks/archive/end2end/: CMakeLists.txt
benchmarks/dsa/dsa_batching_non_blocking/: main.cc
benchmarks/dsa/dsa_non_blocking/: CMakeLists.txt  main.cc
benchmarks/dsa/dsa_opt/: CMakeLists.txt
benchmarks/dsa/dsa_opt/scripts/: bench.py  sweep_results.py
benchmarks/dsa/dsa_opt/src/: main.cc
benchmarks/dsa_batching_blocking/: main.cc
benchmarks/dsa_batching_blocking/scatter_gather/: scatter_gather.cc  scatter_gather.h
benchmarks/dsa_batching_non_blocking/: main.cc
benchmarks/dsa_batching_non_blocking/scatter_gather/: scatter_gather.cc
benchmarks/dsa_non_blocking/scatter_gather/: scatter_gather.cc
benchmarks/dsa_scatter_gather/: main.cc
benchmarks/dsa_scatter_gather/scatter_gather/: scatter_gather.cc  scatter_gather.h
benchmarks/dsa_sensitivity/: CMakeLists.txt
benchmarks/dsa_sensitivity/plots_w_3_4_5_d_3_4_r_4_s_1_2_3/: dsa_sensitivity.csv
benchmarks/dsa_sensitivity/scripts/: bench.py  sweep_results.py
benchmarks/dsa_sensitivity/sota_dsa_perf_results/: dsa_sensitivity.csv
benchmarks/dsa_sensitivity/sota_dsa_perf_results2/: dsa_sensitivity.csv
benchmarks/dsa_sensitivity/src/: benchmark.cc  test_main.cc
benchmarks/end2end/src/: one_optimal_buffer.cc  test_main.cc
benchmarks/end2end_sensitivity/: CMakeLists.txt
benchmarks/end2end_sensitivity/plots_w_3_4_5_6_d_2_3_r_4_s_1_2_3/: dsa_sensitivity.csv
benchmarks/end2end_sensitivity/results_memcpy_small_messages/: dsa_sensitivity.csv
benchmarks/end2end_sensitivity/scripts/: bench.py  sweep_results.py
benchmarks/end2end_sensitivity/src/: backup.cc  benchmark.cc  benchmark_ser1de.cc
benchmarks/header_dev/current_top_results/: dsa_sensitivity.csv
benchmarks/header_dev/plots_w_3_4_5_d_2_3_4_r_4_s_1_2_3/: dsa_sensitivity.csv
benchmarks/header_dev/scripts/: bench.py  sweep_results.py
benchmarks/header_dev/src/: benchmark_ser1de.cc  custom_alloc.h
benchmarks/iaa/iaa_non_blocking_multiple_engines/: CMakeLists.txt  main.cc
benchmarks/proto_compatibility_verification/: CMakeLists.txt  Makefile
benchmarks/proto_compatibility_verification/src/: new_lib_main.cc
benchmarks/ser1de_proto_compatibility_verification/: CMakeLists.txt  test.proto
benchmarks/ser1de_proto_compatibility_verification/protos/: test.pb.cc  test.pb.h
benchmarks/ser1de_proto_compatibility_verification/src/: main.cc  new_lib_main.cc
benchmarks/ser1de_sensitivity/plots_w_3_4_5_d_3_4_r_4_s_1_2_3/: dsa_sensitivity.csv
benchmarks/ser1de_sensitivity/scripts/: bench.py  sweep_results.py
benchmarks/ser1de_sensitivity/src/: benchmark_ser1de.cc
benchmarks/time_distributions/: CMakeLists.txt
benchmarks/time_distributions/protos/: Message3.proto  Message7.proto
benchmarks/time_distributions/src/: benchmark_ser1de.cc
evaluation/ablation_sensitivity/: CMakeLists.txt  README.md
evaluation/ablation_sensitivity/plots_w_3_4_d_3_4_r_4_s_2_3/: sensitivity.csv
evaluation/ablation_sensitivity/scripts/: bench.py  sweep_results.py
evaluation/ablation_sensitivity/src/: benchmark_ser1de.cc  proto_init.cc
evaluation/ablation_study/: results.txt
evaluation/ablation_study/scripts/: make_protos.py  plot_results.py  run_and_plot.py
evaluation/ablation_study/src/: benchmark_ser1de.cc  ser1de.h  serial_ser1de.h
evaluation/cpu_util_icache/: CMakeLists.txt  README.md  results_proto.txt  results_ser1de.txt  summary.txt
evaluation/cpu_util_icache/scripts/: run.sh
evaluation/cpu_util_icache/src/: benchmark_cpu_icache.cc  perf_counters.h
evaluation/fleetbench_latency/: CMakeLists.txt  benchmark_results.txt  detailed_results.json  get_results.py  plot_results.py  plot_results_log-scale.py  results.txt
evaluation/fleetbench_latency/latency_plots/: detailed_results.json
evaluation/fleetbench_latency/results/: benchmark_results.txt
evaluation/fleetbench_latency/scripts/: archive_plot_results.py  plot_results.py
evaluation/fleetbench_latency/src/: benchmark_ser1de.cc
evaluation/fleetbench_throughput/: CMakeLists.txt  old_results.txt  plot_results.py  results.txt
evaluation/fleetbench_throughput/O0_results/: results.txt
evaluation/fleetbench_throughput/O3_results/: results.txt
evaluation/fleetbench_throughput/scripts/: plot_results.py  plot_throughput.py
evaluation/fleetbench_throughput/src/: access_message4.h  benchmark_ser1de.cc  benchmark_ser1de_fixed_latency.cc
evaluation/gbps_fleetbench_throughput/scripts/: run_parallel_benchmark.sh  run_parallel_benchmark_numa.sh
evaluation/gbps_fleetbench_throughput/src/: access_message5.h  benchmark_ser1de.cc
evaluation/gbps_fleetbench_throughput_2/protos/: Message6.proto
evaluation/proto_charac/: BUCKET_BREAKDOWN.md  CMakeLists.txt  README.md  deserialize.perf.data  deserialize.perf.data.old  deserialize.report.txt  proto_breakdown.txt  proto_profile_summary.txt  serialize.perf.data  serialize.perf.data.old  serialize.report.txt
evaluation/proto_charac/scripts/: categorize_symbols.py  (+2 more)
evaluation/sensitivity/: CMakeLists.txt
evaluation/ser1de_time_distributions/: CMakeLists.txt
evaluation/thread_scalability/: .gitignore  CMakeLists.txt  plot_scalability.py
scripts/: configure_dsa_user.sh  configure_iaa_user.sh  proto_generator.py  setup.sh
ser1de/: iaa_comp.h  multi_thread_ser1de.h  old_iaa_comp.h  old_ser1de.h  scatter_gather.h  ser1de.h  ser1de_re.h  sw_only_scatter_gather.h  templated_ser1de.h  tmp_ser1de_re.h
(+84 files in other folders)
